Updating a profile path.

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="sidebar-about">
       <div class="author-image">
-            <img src="/images/laura.jpg" class="img-circle img-headshot center" alt="Profile Picture">
+            <img src="/lauratech/images/laura.jpg" class="img-circle img-headshot center" alt="Profile Picture">
         </div>
 
       <h1>{{ .Site.Title }}</h1>
