--- a/layouts/shortcodes/js_wc.html
+++ b/layouts/shortcodes/js_wc.html
@@ -1,4 +1,4 @@
-<script language="Javascript" type="text/javascript" src ="/js/myscripts.js"></script>
+<script language="Javascript" type="text/javascript" src ="/lauratech/js/myscripts.js"></script>
 <br />
 <p>
 <h2>Press the button to ask the Generator to generate your acronym.</h2>
