Update magic.html to find magic.js

--- a/layouts/shortcodes/magic.html
+++ b/layouts/shortcodes/magic.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>The Magic 8 Ball</title>
-    <script language="Javascript" type="text/javascript" src ="magic.js"></script>
+    <script language="Javascript" type="text/javascript" src ="/lauratech/js/magic.js"></script>
 </head>
 <body bgcolor="#FFFFFF">
 <h2>Press the button to shake the Magic 8 Ball.</h2>
