--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,6 +1,23 @@
 <aside class="sidebar">
   <div class="container">
     <div class="sidebar-about">
+      <style>
+        .sidebar .author-image {
+          width: 140px;
+          height: 220px;
+          border-radius: 50%;
+          overflow: hidden;
+          margin: 0 auto;
+          border: 6px solid #fff;
+        }
+        .sidebar .author-image img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          display: block;
+          border-radius: 0 !important;
+        }
+      </style>
       <div class="author-image">
             <img src="/lauratech/images/laura.jpg" class="img-circle img-headshot center" alt="Profile Picture">
         </div>
