iPhone has a separate mechanism for adding favicon-like icons.

--- a/layouts/partials/json-ld.html
+++ b/layouts/partials/json-ld.html
@@ -1,4 +1,6 @@
 {{ $ISO8601 := "2006-01-02T15:04:05-07:00" }}
+<link rel="icon" href="{{ "/favicon.png" | relURL }}">
+<link rel="apple-touch-icon-precomposed" href="{{ "/apple-touch-icon-144-precomposed.png" | relURL }}">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
