The theme is overloading the soho.js script which is causing issues with my custom scripts. I have removed the script from the footer partial and created an overrides.css file to handle any necessary style changes.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,3 +15,5 @@
   <script src="/js/jquery.min.js"></script>
   <!-- soho.js intentionally omitted to avoid loading unwanted or cached functions -->
 
+  <link rel="stylesheet" href="/css/overrides.css">
+
